<resources>
    <!-- General-->
    <string name="app_name">Studentův Pomocník</string>
    <string name="add_timetable">Přidat rozvrh</string>
    <string name="settings">Nastavení</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>

    <!-- Settings-->
    <string name="personal_number_pref">Osobní číslo</string>
    <string name="personal_number_hint">Osobní číslo, pro které chcete zobrazit rozvrh</string>
    <string name="semester">Semestr</string>
    <string name="semester_hint">Semestr, pro který chcete zobrazit rozvrh</string>
    <string-array name="semester_entries">
        <item>Zimní</item>
        <item>Letní</item>
    </string-array>
    <string-array name="semester_entry_values">
        <item>ZS</item>
        <item>LS</item>
    </string-array>

    <!-- Add timetable-->
    <string-array name="schools">
        <item>Západočeská univerzita v Plzni</item>
        <item>Jihočeská univerzita v Českých Budějovicích</item>
        <item>Akademie výtvarných umění v Praze</item>
        <item>Moravská vysoká škola Olomouc</item>
        <item>Slezská univerzita v Opavě</item>
        <item>Technická univerzita v Liberci</item>
        <item>Univerzita Hradec Králové</item>
        <item>Univerzita J. E. Purkyně v Ústí nad Labem</item>
        <item>Univerzita Pardubice</item>
        <item>Univerzita Palackého v Olomouci</item>
        <item>Univerzita Tomáše Bati ve Zlíně</item>
        <item>Veterinární a farmaceutická univerzita Brno</item>
        <item>Vyšší odborná škola České Budějovice</item>
        <item>Vysoká škola sociálně-správní, Havířov</item>
        <item>Vysoká škola Karla Engliše, a. s.</item>
        <item>Vysoká škola regionálního rozvoje</item>
    </string-array>
    <string name="add_timetable_hint">Zadejte osobní číslo</string>
    <string name="add_timetable_button">Přidat</string>
    <string name="error_no_personal_number">Zadejte osobní číslo!</string>
    <string name="error_no_connection">Pro stažení rozvrhu se musíte připojit k síti</string>
    <string name="error_wrong_personal_number">Pro osobní číslo nebyl ve škole nalezen žádný rozvrh</string>

    <!-- Days-->
    <string name="mo">Pondělí</string>
    <string name="tu">Úterý</string>
    <string name="we">Středa</string>
    <string name="th">Čtvrtek</string>
    <string name="fr">Pátek</string>
    <string name="sa">Sobota</string>
    <string name="su">Neděle</string>
    <string name="other">Ostatní</string>

    <!-- Waiting dialogs-->
    <string name="downloading_dialog_title">Stahování</string>
    <string name="downloading_dialog_text">Počkejte, prosím, stahuji soubory</string>
    <string name="loading_dialog_title">Náčítání</string>
    <string name="loading_dialog_text">Počkejte, prosím, načítám data</string>

    <!-- Timetable-->
    <string name="syllabus">Sylabus</string>
    <string name="terms">Podmínky</string>
    <string name="tasks">Úkoly</string>
    <string name="absences">Absence</string>

    <!-- Syllabus-->
    <string name="syllabus_shortcut">Zkratka: </string>
    <string name="syllabus_name">Název předmětu: </string>
    <string name="syllabus_credits">Kredity: </string>
    <string name="syllabus_statute">Statut:</string>
    <string name="syllabus_garants">Garanti: </string>
    <string name="syllabus_teachers">Vyučující: </string>
    <string name="syllabus_excercise_teachers">Cvičící: </string>
    <string name="syllabus_seminar_teachers">Cvičící semináře: </string>
    <string name="syllabus_conditioning_subjects">Podmiňující předměty: </string>
    <string name="syllabus_excluding_subjects">Vylučující předměty: </string>
    <string name="syllabus_is_conditioning_to_subjects">Podmiňuje předměty: </string>
    <string name="syllabus_literature">Literatura: </string>
    <string name="syllabus_anotation">Anotace: </string>
    <string name="syllabus_type_of_exam">Typ zkoušky: </string>
    <string name="syllabus_credit_before_exam">Zápočet před zkouškou: </string>
    <string name="syllabus_exam_form">Forma zkoušky: </string>
    <string name="syllabus_requirements">Požadavky: </string>
    <string name="syllabus_overview">Přehled látky: </string>
    <string name="syllabus_prerequisitions">Předpoklady: </string>
    <string name="syllabus_gain_knowledge">Získané způsobilosti: </string>
    <string name="syllabus_time_severity">Časová náročnost: </string>
    <string name="syllabus_url">URL: </string>
    <string name="syllabus_languages">Vyučovací jazyky: </string>

    <!-- Tasks-->
    <string name="add_task">Přidat úkol</string>
    <string name="task_title">Název</string>
    <string name="task_description">Popis</string>
    <string name="delete_task">Chcete smazat úkol?</string>
    <string name="error_no_task_title">Musíte zadat název úkolu</string>

    <!-- Terms-->
    <string name="add_term">Přidat podmínku</string>
    <string name="delete_term">Chcete smazat podmínku?</string>
    <string name="error_no_term_title">Musíte zadat název podmínky</string>

    <!-- Absences-->
    <string name="absences_title">Absence (počet hodin):</string>
    <string name="add_absence">Upravit absence</string>

    <!-- Delete-->
    <string name="delete">Vymazat rozvrhy</string>
    <string name="delete_timetable">Vyberte rozvrhy, které chcete vymazat</string>
    <string name="nothing_to_delete">Nenalezen žádný rozvrh k smazání</string>

    <!-- About-->
    <string name="about">O aplikaci</string>
    <string name="about_description">Tato aplikace vznikla jako semestrální práce předmětu KIV/MKZ na Západočeské univerzitě v Plzni. Účelem bylo vytvořit užitečnou aplikaci pro studenty, která by jim dovolila jednoduše a přehledně organizovat požadavky a úkoly v jednotlivých předmětech.</string>

</resources>
