<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".main.MainActivity">

    <item
        android:id="@+id/action_add_timetable"
        android:icon="@drawable/add_timetable"
        android:orderInCategory="1"
        android:title="@string/add_timetable"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete_timetable"
        android:icon="@drawable/delete_timetable"
        android:orderInCategory="2"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

</menu>
