<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".subjects.AddTimetableActivity"
                tools:showIn="@layout/activity_add_task">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/task_title"/>

    <EditText
        android:id="@+id/dateEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleEditText"
        android:ems="10"
        android:inputType="date"
        android:onClick="selectDate"
        android:textIsSelectable="true"/>

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleEditText"
        android:layout_toEndOf="@+id/dateEditText"
        android:layout_toRightOf="@+id/dateEditText"
        android:ems="5"
        android:inputType="time"
        android:onClick="selectTime"
        android:textIsSelectable="true"/>

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateEditText"
        android:hint="@string/task_description"
        android:inputType="textMultiLine"/>

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionEditText"
        android:layout_centerHorizontal="true"
        android:onClick="addTask"
        android:text="@string/add_task"/>

</RelativeLayout>
